--- a/templates/blog/layout.html
+++ b/templates/blog/layout.html
@@ -30,7 +30,7 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script
 		><![endif]-->
 
-    <title>{% block title %} Fantastic Django Blog {% endblock title %}</title>
+    <title>{% block title %} Advance Django Blog {% endblock title %}</title>
 </head>
 
 <body>
@@ -56,7 +56,7 @@
             <div class="container">
                 <!-- Navbar Brand -->
                 <div class="navbar-header d-flex align-items-center justify-content-between">
-                    <!-- Navbar Brand --><a href="{% url 'index' %}" class="navbar-brand">Fantastic Django Blog</a>
+                    <!-- Navbar Brand --><a href="{% url 'index' %}" class="navbar-brand">Advance Django Blog</a>
                     <!-- Toggle Button-->
                     <button type="button" data-toggle="collapse" data-target="#navbarcollapse"
                         aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation"
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="logo">
-                        <h6 class="text-white">Fantastic Django Blog</h6>
+                        <h6 class="text-white">Advance Django Blog</h6>
                     </div>
                     <div class="contact-details">
                         <p>New Laxmi Nagar, Gondia</p>
@@ -131,7 +131,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>&copy; {% now 'Y' %} All rights reserved. Fantastic Django Blog</p>
+                        <p>&copy; {% now 'Y' %} All rights reserved. Advance Django Blog</p>
                     </div>
                 </div>
             </div>
